--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@types/ora": "^3.2.0",
     "openai": "^3.2.1",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "chatgpt": "^5.1.2"
+    "chatgpt": "^5.1.2",
+    "ora-promise": "^1.0.0"
   }
 }
